fix: Profile too close to text (#1108)

--- a/webapp/src/components/ManageAssetPage/Rent/Rent.module.css
+++ b/webapp/src/components/ManageAssetPage/Rent/Rent.module.css
@@ -128,9 +128,8 @@
   flex: 1 1 auto;
 }
 
-.profile {
-  padding-left: 5px;
-  padding-right: 5px;
+.rentedBy {
+  margin-left: 7px;
 }
 
 .activeRentActions {
